package org.example;

import java.util.List;

public class Project {

    private String _name;
    private String _description;
    private double _budget;

    private List <Task> task;
    // employee
}
