@startuml
class Organization {
    - name: String



}

class Department {
    - name: String
    - director: Employee

}

class Employee {
    - name: String
    - position: String
    - salary: double
    - department: Department
}

class Project {
    - name: String
    - description: String
    - budget: double
    - manager: Employee

}

class Task {
    - name: String
    - status: String
    - assignedTo: Employee
    - project: Project
}

class Inventory {
    - itemName: String
    - quantity: int
    - location: String
}

Organization "1" -- "many" Department
Organization "1" -- "many" Project
Organization "1" -- "many" Inventory
Department "1" -- "many" Employee
Project "1" -- "many" Task
Task "1" -- "1" Employee
Task "many" -- "1" Project
@enduml
